--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <!-- bs 5.1 inicio -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      <!-- bs 5.1 fin -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
      <link rel="stylesheet" href="estilos.css">
     <title>bs</title>
 </head>
@@ -13,26 +14,26 @@
      <!-- navbar incia -->
      <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">SubliBart 👕</a>
+          <a class="titulo" href="#">SubliBart 👕</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Buzos</a>
+                <a class="nav-link" href="pagess/buzos.html">Buzos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Remeras</a>
+                <a class="nav-link" href="pagess/remeras.html">Remeras</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Merch</a>
+                <a class="nav-link" href="pagess/merch.html">Merch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Carrito</a>
+                <a class="nav-link" href="pagess/carrito.html">Carrito</a>
               </li>
             </ul>
           </div>
@@ -104,7 +105,29 @@
   </div>
 
   <!-- fin carrusel -->
+  <div class="call">
+    <legend class="titulo">Sabias que...</legend>
+    <h2>Sublimacion</h2>
+    <p>En esta tecnica utilizamos un papel impreso con una tinta especial que se calienta a 200° junto con la prenda para que se evaporen las particulas de tinta y se impregnen.</p>
+    <p>Es ideal para estampar productos que contengan polieter como platos, tazas, gorras, vasos, bolsas ecologicas, etc.</p>
+    <h2>DTF</h2>
+    <p>Es una tecnica digital en la cual se transfiere el diseño mediante un film impreso a una temperatura de 150°. Tiene un acabado engomado y flexible.</p>
+    <p>Es ideal para logos, marcas, escudos y personalizacion de prendas ya que se adapata a varios tipos de tela.</p>
+    <a href="#" class="boton">MAS INFO</a>
+</div>
 
+<div>
+  <footer>
+    <a href="#" class="subir">
+        <i class="fa-solid fa-up-long"></i>
+    </a>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13396.7886092631!2d-68.7512681!3d-32.919389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0dc32c07df17%3A0x1d2e763707e5b1f2!2sYPF!5e0!3m2!1ses!2sar!4v1696859102484!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
+    <p>Derechos de CopyRight</p>
+    <div class="redes">
+        <a href="https://www.instagram.com/subli.bart/"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+</footer>
 
     <!-- enlace de bs separete -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
