--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <a class="nav-link" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pagess/buzos.html">Buzos</a>
+                <a class="nav-link" href="pages/buzos.html">Buzos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pagess/remeras.html">Remeras</a>
+                <a class="nav-link" href="pages/remeras.html">Remeras</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pagess/merch.html">Merch</a>
+                <a class="nav-link" href="pages/merch.html">Merch</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pagess/carrito.html">Carrito</a>
+                <a class="nav-link" href="pages/carrito.html">Carrito</a>
               </li>
             </ul>
           </div>
@@ -121,13 +121,14 @@
     <a href="#" class="subir">
         <i class="fa-solid fa-up-long"></i>
     </a>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13396.7886092631!2d-68.7512681!3d-32.919389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0dc32c07df17%3A0x1d2e763707e5b1f2!2sYPF!5e0!3m2!1ses!2sar!4v1696859102484!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe>
-    <p>Derechos de CopyRight</p>
+    <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13396.7886092631!2d-68.7512681!3d-32.919389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0dc32c07df17%3A0x1d2e763707e5b1f2!2sYPF!5e0!3m2!1ses!2sar!4v1696859102484!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="mapa"></iframe> -->
+    <p class="cc">Derechos de CopyRight</p>
     <div class="redes">
         <a href="https://www.instagram.com/subli.bart/"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-instagram"></i></a>
     </div>
 </footer>
+</div>
 
     <!-- enlace de bs separete -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
