vincular con github

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
   <div class="call">
     <legend class="titulo">Sabias que...</legend>
     <h2>Sublimacion</h2>
-    <p>En esta tecnica utilizamos un papel impreso con una tinta especial que se calienta a 200° junto con la prenda para que se evaporen las particulas de tinta y se impregnen.</p>
-    <p>Es ideal para estampar productos que contengan polieter como platos, tazas, gorras, vasos, bolsas ecologicas, etc.</p>
+    <p class="texto">En esta tecnica utilizamos un papel impreso con una tinta especial que se calienta a 200° junto con la prenda para que se evaporen las particulas de tinta y se impregnen.</p>
+    <p class="texto">Es ideal para estampar productos que contengan polieter como platos, tazas, gorras, vasos, bolsas ecologicas, etc.</p>
     <h2>DTF</h2>
-    <p>Es una tecnica digital en la cual se transfiere el diseño mediante un film impreso a una temperatura de 150°. Tiene un acabado engomado y flexible.</p>
-    <p>Es ideal para logos, marcas, escudos y personalizacion de prendas ya que se adapata a varios tipos de tela.</p>
+    <p class="texto">Es una tecnica digital en la cual se transfiere el diseño mediante un film impreso a una temperatura de 150°. Tiene un acabado engomado y flexible.</p>
+    <p class="texto">Es ideal para logos, marcas, escudos y personalizacion de prendas ya que se adapata a varios tipos de tela.</p>
     <a href="#" class="boton">MAS INFO</a>
 </div>
 
