--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
      <!-- bs 5.1 fin -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
      <link rel="stylesheet" href="estilos.css">
-    <title>bs</title>
+    <title>SubliBart - Inicio</title>
+    <meta name="description" content="Llevar un SubliBart te cambia la vida">
+    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
 </head>
 <body>
      <!-- navbar incia -->
@@ -40,7 +42,7 @@
         </div>
       </nav>
     <!-- navbar fin -->
-
+  
 
     <!-- Carousel -->
 <div id="demo" class="carousel slide" data-bs-ride="carousel">
