--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,7 +8,9 @@
     <!-- bs 5.1 fin -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="..//estilos.css">
-    <title>Carrito</title>
+    <title>SubliBart - Carrito</title>
+    <meta name="description" content="que te vas a llevar?">
+    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
@@ -50,6 +52,24 @@
         <div class="item item8"> <p>Taza Perrito</p> </div>
     </div>
 
+    <div class="caja">
+      <form action="enviar.php" method="get" enctype="application/x-www-form-urlencoded">
+        <h2>Contactanos...</h2>
+        <label for="">Nombre</label>
+        <input type="text" placeholder="escribe tu nombre" required> <br>
+        <label for="">Apellido</label>
+        <input type="text" placeholder="escribe tu apellido">
+        <br>
+        <label for="">Email</label>
+        <input type="email" placeholder="email">
+        <br>
+        <textarea name="areadetexto" id="" cols="20" rows="7" placeholder="escribe tu comentario"></textarea>
+        <br>
+        <input type="submit">
+        <input type="reset" value="borrar">
+        <br>
+      </form>
+    </div>
 
       <div>
         <footer>
