--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -8,7 +8,9 @@
     <!-- bs 5.1 fin -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="..//estilos.css">
-    <title>Remeras</title>
+    <title>SubliBart - Remeras</title>
+    <meta name="description" content="remeras bien facheras">
+    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
