--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="caja">
-      <form action="enviar.php" method="get" enctype="application/x-www-form-urlencoded">
+      <form class="cajita" action="enviar.php" method="get" enctype="application/x-www-form-urlencoded">
         <h2>Contactanos...</h2>
         <label for="">Nombre</label>
         <input type="text" placeholder="escribe tu nombre" required> <br>
@@ -65,8 +65,8 @@
         <br>
         <textarea name="areadetexto" id="" cols="20" rows="7" placeholder="escribe tu comentario"></textarea>
         <br>
-        <input type="submit">
-        <input type="reset" value="borrar">
+        <input type="Submit">
+        <input type="reset" value="Borrar">
         <br>
       </form>
     </div>
