--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="estilos.css">
     <title>SubliBart - Inicio</title>
     <meta name="description" content="Llevar un SubliBart te cambia la vida">
-    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
+    <meta name="keywords" content="ropa, remeras, buzos, merch, comprar, argentina, subliado, estampado">
 </head>
 <body>
      <!-- navbar incia -->
