--- a/pages/buzos.html
+++ b/pages/buzos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="..//estilos.css">
     <title>SubliBart - Buzos</title>
     <meta name="description" content="mira todos los buzos que tenemos para ofrecerte">
-    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
+    <meta name="keywords" content="ropa, comprar, buzos, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
