--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="..//estilos.css">
     <title>SubliBart - Carrito</title>
     <meta name="description" content="que te vas a llevar?">
-    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
+    <meta name="keywords" content="ropa, remeras, buzos, merch, comprar, carrito, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
