--- a/pages/merch.html
+++ b/pages/merch.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="..//estilos.css">
     <title>SubliBart - Merch</title>
     <meta name="description" content="Cositas para regalar">
-    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
+    <meta name="keywords" content="ropa, comprar, merch, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
