--- a/pages/remeras.html
+++ b/pages/remeras.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="..//estilos.css">
     <title>SubliBart - Remeras</title>
     <meta name="description" content="remeras bien facheras">
-    <meta name="keywords" content="ropa, remeras, buzos, merch, argentina, subliado, estampado">
+    <meta name="keywords" content="ropa, remeras, commprar, argentina, subliado, estampado">
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark">
